--- a/package.json
+++ b/package.json
@@ -16,15 +16,35 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@coinbase/wallet-sdk": "^4.3.0",
+    "@wagmi/core": "^2.16.5",
+    "connectkit": "^1.8.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "openai": "^4.0.0"
+    "dotenv": "^16.4.7",
+    "ethers": "^5.8.0",
+    "express": "^4.21.2",
+    "next": "^15.2.0",
+    "openai": "^4.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "viem": "^2.23.5",
+    "wagmi": "^2.14.12"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^3.0.0",
+    "@openzeppelin/contracts": "^5.2.0",
+    "hardhat": "^2.22.19",
     "nodemon": "^3.0.1"
   },
   "engines": {
     "node": ">=14.0.0"
-  }
-} 
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/KeldrickD/Golf-Guru-Zone.git"
+  },
+  "bugs": {
+    "url": "https://github.com/KeldrickD/Golf-Guru-Zone/issues"
+  },
+  "homepage": "https://github.com/KeldrickD/Golf-Guru-Zone#readme"
+}
