--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "wagmi": "^2.5.5"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-ethers": "^3.0.8",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -42,6 +44,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "hardhat": "^2.19.5",
+    "hardhat-deploy": "^0.14.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
