--- a/package.json
+++ b/package.json
@@ -23,34 +23,57 @@
   "dependencies": {
     "@coinbase/wallet-sdk": "^3.9.1",
     "@openzeppelin/contracts": "^5.0.1",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-progress": "^1.1.2",
+    "@radix-ui/react-scroll-area": "^1.2.3",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-toast": "^1.2.6",
+    "@reown/walletkit": "^1.2.1",
+    "@tanstack/react-query": "^5.67.1",
+    "@types/styled-components": "^5.1.34",
+    "@walletconnect/core": "^2.19.0",
+    "@walletconnect/utils": "^2.19.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "connectkit": "^1.7.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.1",
-    "ethers": "^5.7.2",
+    "ethers": "^6.1.0",
     "express": "^4.18.2",
-    "next": "14.1.0",
+    "fs": "^0.0.1-security",
+    "lucide-react": "^0.479.0",
+    "next": "^14.2.24",
+    "path": "^0.12.7",
+    "pino-pretty": "^13.0.0",
+    "qrcode.react": "^4.2.0",
     "react": "^18",
     "react-dom": "^18",
-    "viem": "^2.7.3",
+    "recharts": "^2.15.1",
+    "styled-components": "^6.1.15",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
     "wagmi": "^2.5.5"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-ethers": "^3.0.8",
-    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "dotenv": "^16.4.7",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "hardhat": "^2.19.5",
     "hardhat-deploy": "^0.14.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "viem": "^2.23.5"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=18.17.0"
   },
   "repository": {
     "type": "git",
