Fix build and deployment issues: Refactor serviceRegistry, migrate to app directory, remove goal tracking, update dynamic routes

--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
 NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=789ad8cc954e60b115a60955e5ff8a58
 NEXT_PUBLIC_CONTRACT_ADDRESS=0x691cBD243D73Bc483dfe7003A09040063270CBBC
-NEXT_PUBLIC_STRIPE_PREMIUM_LINK=[STRIPE_PREMIUM_LINK] 
+NEXT_PUBLIC_STRIPE_PREMIUM_LINK=[STRIPE_PREMIUM_LINK]
+NEXT_PUBLIC_DISABLE_SERVICES=true 
