--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@auth/prisma-adapter": "^2.8.0",
+    "@prisma/client": "^6.5.0",
+    "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-progress": "^1.1.2",
@@ -34,9 +37,12 @@
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "framer-motion": "^12.5.0",
     "lucide-react": "^0.479.0",
     "next": "^14.2.24",
+    "next-auth": "^4.24.11",
     "openai": "^4.87.3",
+    "prisma": "^6.5.0",
     "react": "^18",
     "react-dom": "^18",
     "recharts": "^2.15.1",
