--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "MIT",
   "dependencies": {
     "@auth/prisma-adapter": "^2.8.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
@@ -48,6 +49,7 @@
     "recharts": "^2.15.1",
     "stripe": "^14.25.0",
     "styled-components": "^6.1.15",
+    "swr": "^2.3.3",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
   },
