--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
+    "@react-pdf/renderer": "^4.3.0",
     "@tanstack/react-query": "^5.67.1",
     "@types/styled-components": "^5.1.34",
     "class-variance-authority": "^0.7.1",
@@ -44,8 +45,10 @@
     "next-auth": "^4.24.11",
     "openai": "^4.87.3",
     "prisma": "^6.5.0",
+    "qrcode": "^1.5.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-share": "^5.2.2",
     "recharts": "^2.15.1",
     "stripe": "^14.25.0",
     "styled-components": "^6.1.15",
