--- a/package.json
+++ b/package.json
@@ -21,15 +21,18 @@
   "license": "MIT",
   "dependencies": {
     "@auth/prisma-adapter": "^2.8.0",
+    "@hookform/resolvers": "^4.1.3",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@react-pdf/renderer": "^4.3.0",
@@ -38,6 +41,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "express": "^4.18.2",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.479.0",
@@ -48,14 +52,17 @@
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "react": "^18",
+    "react-day-picker": "^9.6.2",
     "react-dom": "^18",
+    "react-hook-form": "^7.54.2",
     "react-share": "^5.2.2",
     "recharts": "^2.15.1",
     "stripe": "^14.25.0",
     "styled-components": "^6.1.15",
     "swr": "^2.3.3",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "^20.17.24",
