--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
+    "ethers": "^6.13.5",
     "express": "^4.18.2",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.479.0",
