--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "serve": "npx serve out",
     "lint": "next lint",
     "server": "node server/server.js"
   },
@@ -43,7 +44,7 @@
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "ethers": "^6.13.5",
-    "express": "^4.18.2",
+    "express": "^4.21.2",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.479.0",
     "next": "^14.2.24",
