--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "server/server.js",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "serve": "npx serve out",
     "lint": "next lint",
