--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@radix-ui/react-toast": "^1.2.6",
     "@react-pdf/renderer": "^4.3.0",
     "@tanstack/react-query": "^5.67.1",
+    "@tremor/react": "^3.18.7",
+    "@types/next-auth": "^3.15.0",
     "@types/styled-components": "^5.1.34",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -71,7 +73,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.17.24",
-    "@types/react": "^18.3.18",
+    "@types/react": "^18.3.20",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "dotenv": "^16.4.7",
