--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@react-pdf/renderer": "^4.3.0",
     "@tanstack/react-query": "^5.67.1",
     "@tremor/react": "^3.18.7",
@@ -64,6 +65,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
     "react-share": "^5.2.2",
+    "react-webcam": "^7.2.0",
     "recharts": "^2.15.1",
     "stripe": "^14.25.0",
     "styled-components": "^6.1.15",
