--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,92 +1,21 @@
 {
   "name": "Golf Guru Zone",
   "short_name": "Golf Guru",
-  "description": "Your personal AI-powered golf coach and analytics platform",
+  "description": "Track and analyze your golf performance",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#020817",
+  "background_color": "#ffffff",
   "theme_color": "#0369a1",
-  "orientation": "portrait-primary",
   "icons": [
-    {
-      "src": "/icons/icon-72x72.png",
-      "sizes": "72x72",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/icons/icon-96x96.png",
-      "sizes": "96x96",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/icons/icon-128x128.png",
-      "sizes": "128x128",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/icons/icon-144x144.png",
-      "sizes": "144x144",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/icons/icon-152x152.png",
-      "sizes": "152x152",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
     {
       "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/icons/icon-384x384.png",
-      "sizes": "384x384",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     },
     {
       "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
-    }
-  ],
-  "screenshots": [
-    {
-      "src": "/screenshots/mobile-dashboard.png",
-      "sizes": "750x1334",
-      "type": "image/png",
-      "form_factor": "narrow",
-      "label": "Dashboard on mobile"
-    },
-    {
-      "src": "/screenshots/desktop-analytics.png",
-      "sizes": "1280x800",
-      "type": "image/png",
-      "form_factor": "wide",
-      "label": "Analytics on desktop"
-    }
-  ],
-  "shortcuts": [
-    {
-      "name": "Add Round",
-      "short_name": "Add Round",
-      "description": "Record a new golf round",
-      "url": "/rounds/new",
-      "icons": [{ "src": "/icons/add-round.png", "sizes": "192x192" }]
-    },
-    {
-      "name": "View Analytics",
-      "short_name": "Analytics",
-      "description": "View your golf performance analytics",
-      "url": "/analytics",
-      "icons": [{ "src": "/icons/analytics.png", "sizes": "192x192" }]
+      "type": "image/png"
     }
   ]
 } 
