--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "description": "AI-powered golf performance analysis tool",
   "main": "server/server.js",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev && node public/index.js",
     "build": "prisma generate && next build",
-    "start": "next start",
+    "start": "next start && node public/index.js",
     "serve": "npx serve out",
     "lint": "next lint",
     "server": "node server/server.js"
@@ -64,6 +64,7 @@
     "react-day-picker": "^9.6.3",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.5.0",
     "react-share": "^5.2.2",
     "react-webcam": "^7.2.0",
     "recharts": "^2.15.1",
